--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,13 +17,13 @@
     <strong>Welcome to IONIC FRAMEWORK</strong>
     <ion-list>
      <ion-item>
-    <ion-input type="text" placeholder="USERNAME"></ion-input>
+    <ion-input type="text" placeholder="username"></ion-input>
     </ion-item>
     </ion-list>
 
     <ion-list>
     <ion-item>
-    <ion-input type="password" placeholder="placeholder"></input type>
+    <ion-input type="password" placeholder="password"></input type>
      </ion-item>
     </ion-list>
   </div>
